[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tikzimg"
version = "0.1.0"
description = "A CLI tool to quickly create and compile TikZ diagrams to SVG."
readme = "README.md"
requires-python = ">=3.12"

# This is the magic part that creates the command-line script
[project.scripts]
tikzimg = "tikzimg.cli:main"

[project.urls]
Homepage = "https://github.com/jelso13/tikzimg"

# Optional: Add development dependencies here
[project.optional-dependencies]
dev = ["pytest", "mypy"]
